--- a/DjangoGIF/apps/users/templates/users/view.html
+++ b/DjangoGIF/apps/users/templates/users/view.html
@@ -1,7 +1,7 @@
 <!--{% extends 'home/base.html' %}-->
 {% block content %}
-    <div class="container">
-        <div class="nav hidden">
+<div class="container" xmlns="http://www.w3.org/1999/html">
+        <div class="nav">
             <div class="nav-logo">
                 <div id="gif" class="nav-logo-title">GIF</div>
 
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="profile-info hidden">
+        <div class="profile-info">
             <div class="profile-avatar">
                 <img src="http://i.imgur.com/1Nd8pHV.gif">
             </div>
@@ -55,12 +55,57 @@
         </div>
 
         {% if can_edit %}
-        <div class="add-gif-form-button">
-            Add GIF
+        <div class="main-buttons">
+            <div class="add-gif-form-button green-btn">
+                Add GIF
+            </div>
+
+            <div class="bulk-gif-button blue-btn">
+                Bulk Operations
+            </div>
         </div>
         {% endif %}
 
-        <div id="grids hidden">
+        <div id="bulk-operations" class="hidden">
+            <div id="bulk-delete-btn" class="bulk-btn red-btn">Delete GIFs</div>
+            <div id="bulk-operations-delete" class="bulk-option hidden">
+                <p>Delete Selected GIFs</p>
+                <form action="{% url 'users:bulk-delete' %}" method="post">
+                    {% csrf_token %}
+                    <input class="bulk-values hidden" type="text" value="0" name='bulk_values' placeholder="GIF IDs">
+                    <input type="text" value="{{ user_id }}" name="user_id" class="hidden">
+                    <input type="submit" class="submit red-btn" value="Delete">
+                </form>
+            </div>
+
+            <div id="bulk-add-tags-btn" class="bulk-btn green-btn">Add Tags</div>
+            <div id="bulk-operations-add-tags" class="bulk-option hidden">
+                <p>Add Tags to Selected GIFs</p>
+
+                <form action="{% url 'users:bulk-add-tags' %}" method="post">
+                    {% csrf_token %}
+                    <input type="text" name='tags' placeholder="Comma Separated Tags">
+                    <input class="bulk-values hidden" type="text" value="0" name='bulk_values' placeholder="GIF IDs">
+                    <input type="text" value="{{ user_id }}" name="user_id" class="hidden">
+                    <input type="submit" class="submit blue-btn" value="Submit">
+                </form>
+            </div>
+
+            <div id="bulk-remove-tags-btn" class="bulk-btn blue-btn">Remove Tags</div>
+            <div id="bulk-operations-remove-tags" class="bulk-option hidden">
+                <p>Remove Tags From Selected GIFs</p>
+
+                <form action="{% url 'users:bulk-remove-tags' %}" method="post">
+                    {% csrf_token %}
+                    <input type="text" name='tags' placeholder="Comma Separated Tags">
+                    <input class="bulk-values hidden" type="text" value="0" name='bulk_values' placeholder="GIF IDs">
+                    <input type="text" value="{{ user_id }}" name="user_id" class="hidden">
+                    <input type="submit" class="submit blue-btn" value="Submit">
+                </form>
+            </div>
+        </div>
+
+        <div id="grids">
             <div id="tagged-gif-grid" class="gif-grid">
                 {% for entry in tagged_gifs %}
                 <div class="tag-group">
@@ -71,8 +116,9 @@
 
                     <div class="tag-manager hidden">
                         <div class="tag-manager-options">
-                            <div class="rename">Rename</div>
-                            <div class="delete">Delete</div>
+                            <div class="tag-manager-title">Tag Options</div>
+                            <div class="rename green-btn">Rename</div>
+                            <div class="delete red-btn">Delete</div>
                         </div>
 
                         <div class="tag-manager-form">
@@ -83,7 +129,7 @@
                                 <input type="text" name="new_name" value="{{ entry.0 }}">
                                 <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
                                 <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
-                                <input type="submit" class="submit">
+                                <input type="submit" class="blue-btn">
                             </form>
 
                             <form class="delete-tag-form hidden" action="{% url 'users:delete-tag' %}" method="post">
@@ -92,7 +138,7 @@
                                 {% csrf_token %}
                                 <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
                                 <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
-                                <input type="submit" class="delete" value="Delete" style="display: inline-block;">
+                                <input type="submit" class="red-btn" value="Delete">
                             </form>
                         </div>
                     </div>
@@ -102,11 +148,17 @@
                         <a name="{{ entry.0 }}"></a>
 
                         <div class="gif-grid-element animate">
+                            <div class="bulk-wrapper hidden">
+                                <i class="fa fa-circle-o"></i>
+                                <input type="text" value="{{ object.id }}" class="hidden">
+                            </div>
+
                             <div class="gif-url hidden">{{ object.url }}</div>
                             <img class="gif-grid-thumbnail animate" src="{{ object.thumbnail.url }}">
 
                             <p class="gif-date">Added: {{ object.created }}</p>
                             <p class="gif-label">{{ object.label }}</p>
+                            <i class="fa fa-expand gif-expand"></i>
 
                             {% if can_edit %}
                             <i class="fa fa-times delete-icon animate"></i>
@@ -119,7 +171,7 @@
                                     </div>
 
                                     <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
-                                    <input type="submit" value="Delete GIF" class="submit warning">
+                                    <input type="submit" value="Delete GIF" class="red-btn">
                                 </form>
                             </div>
 
@@ -150,7 +202,7 @@
                                                 <div class="tags-to-be-added-title">Tags to be Added</div>
                                             </div>
 
-                                            <div class="add-tags-title">
+                                            <div class="add-tags-title green-btn">
                                                 <i class="fa fa-tag"></i>
                                                 Add Tags
                                                 <input type="text" value="0" class="add-tags-input hidden">
@@ -162,7 +214,7 @@
                                         <input class="gif-id-field hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
                                     </div>
 
-                                    <input type="submit" value="Apply" class="edit-gif-submit submit">
+                                    <input type="submit" value="Apply" class="edit-gif-submit blue-btn">
                                 </form>
                             </div>
                             {% endif %}
@@ -178,10 +230,15 @@
 
                     {% for object in gifs %}
                     <div class="gif-grid-element animate">
+                        <div class="bulk-wrapper hidden">
+                            <i class="fa fa-circle-o"></i>
+                            <input type="text" value="{{ object.id }}" class="hidden">
+                        </div>
+
                         <div class="gif-url hidden">{{ object.url }}</div>
                         <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
                         <p class="gif-label">{{ object.label }}</p>
-                        <p class="gif-date">Added: {{ object.created }}</p>
+                        <i class="fa fa-expand gif-expand"></i>
 
                         {% if can_edit %}
                         <i class="fa fa-times delete-icon animate"></i>
@@ -194,7 +251,7 @@
                                 </div>
 
                                 <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
-                                <input type="submit" value="Delete GIF" class="submit warning">
+                                <input type="submit" value="Delete GIF" class="red-btn">
                             </form>
                         </div>
 
@@ -225,7 +282,7 @@
                                             <div class="tags-to-be-added-title">Tags to be Added</div>
                                         </div>
 
-                                        <div class="add-tags-title">
+                                        <div class="add-tags-title green-btn">
                                             <i class="fa fa-tag"></i>
                                             Add Tags
                                             <input type="text" value="0" class="add-tags-input hidden">
@@ -237,7 +294,7 @@
                                     <input class="gif-id-field hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
                                 </div>
 
-                                <input type="submit" value="Apply" class="edit-gif-submit submit">
+                                <input type="submit" value="Apply" class="edit-gif-submit blue-btn">
                             </form>
                         </div>
                         {% endif %}
@@ -254,8 +311,8 @@
 
         {% csrf_token %}
         {{ add_form }}
-        <input type="submit" value="Add GIF" class="submit">
-        <div id="cancel-add">Cancel</div>
+        <input id="add-gif-submit" type="submit" value="Add GIF" class="blue-btn">
+        <div id="cancel-add" class="red-btn">Cancel</div>
     </form>
 </div>
 {% endif %}
