--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -143,25 +143,121 @@ hr {
 	box-shadow: 0px 2px 0px #e70000;
 }
 
+.yellow-btn {
+	position: relative;
+	background-color: #ffc726;
+	text-align: center;
+	color: white;
+	border-radius: .2em;
+	border: none;
+	-webkit-box-shadow: 0px 6px 0px #f2b400;
+	-moz-box-shadow: 0px 6px 0px #f2b400;
+	box-shadow: 0px 6px 0px #f2b400; 
+}
+
+.yellow-btn:hover {
+	cursor: pointer;
+	background-color: #f2b400;
+	-webkit-box-shadow: 0px 6px 0px #bf8e00;
+	-moz-box-shadow: 0px 6px 0px #bf8e00;
+	box-shadow: 0px 6px 0px #bf8e00;
+}
+
+.yellow-btn:active, .yellow-btn-selected {
+	top: 4px;
+	background-color: #f2b400;
+	-webkit-box-shadow: 0px 2px 0px #bf8e00;
+	-moz-box-shadow: 0px 2px 0px #bf8e00;
+	box-shadow: 0px 2px 0px #bf8e00;
+}
+
+.yellow-btn-selected:hover {
+	background-color: #bf8e00;
+	-webkit-box-shadow: 0px 2px 0px #8c6800;
+	-moz-box-shadow: 0px 2px 0px #8c6800;
+	box-shadow: 0px 2px 0px #8c6800;
+}
+
+.purple-btn {
+	position: relative;
+	background-color: #585ec7;
+	text-align: center;
+	color: white;
+	border-radius: .2em;
+	border: none;
+	-webkit-box-shadow: 0px 6px 0px #3b42b1;
+	-moz-box-shadow: 0px 6px 0px #3b42b1;
+	box-shadow: 0px 6px 0px #3b42b1; 
+}
+
+.purple-btn:hover {
+	cursor: pointer;
+	background-color: #3b42b1;
+	-webkit-box-shadow: 0px 6px 0px #2e348b;
+	-moz-box-shadow: 0px 6px 0px #2e348b;
+	box-shadow: 0px 6px 0px #2e348b;
+}
+
+.purple-btn:active, .purple-btn-selected {
+	top: 4px;
+	background-color: #3b42b1;
+	-webkit-box-shadow: 0px 2px 0px #2e348b;
+	-moz-box-shadow: 0px 2px 0px #2e348b;
+	box-shadow: 0px 2px 0px #2e348b;
+}
+
+.purple-btn-selected:hover {
+	background-color: #2e348b;
+	-webkit-box-shadow: 0px 2px 0px #212665;
+	-moz-box-shadow: 0px 2px 0px #212665;
+	box-shadow: 0px 2px 0px #212665;
+}
+
+.peach-btn {
+	position: relative;
+	background-color: #FF8359;
+	text-align: center;
+	color: white;
+	border-radius: .2em;
+	border: none;
+	-webkit-box-shadow: 0px 6px 0px #ff5d26;
+	-moz-box-shadow: 0px 6px 0px #ff5d26;
+	box-shadow: 0px 6px 0px #ff5d26; 
+}
+
+.peach-btn:hover {
+	cursor: pointer;
+	background-color: #ff5d26;
+	-webkit-box-shadow: 0px 6px 0px #f23d00;
+	-moz-box-shadow: 0px 6px 0px #f23d00;
+	box-shadow: 0px 6px 0px #f23d00;
+}
+
+.peach-btn:active, .peach-btn-selected {
+	top: 4px;
+	background-color: #ff5d26;
+	-webkit-box-shadow: 0px 2px 0px #f23d00;
+	-moz-box-shadow: 0px 2px 0px #f23d00;
+	box-shadow: 0px 2px 0px #f23d00;
+}
+
+.peach-btn-selected:hover {
+	background-color: #f23d00;
+	-webkit-box-shadow: 0px 2px 0px #bf3000;
+	-moz-box-shadow: 0px 2px 0px #bf3000;
+	box-shadow: 0px 2px 0px #bf3000;
+}
+
 .bulk-btn {
-	margin: 1em auto;
-	width: 60%;
+	display: inline-block;
+	margin: .25em auto;
+	width: 25%;
+	min-width: 7em;
 	height: 2em;
 	line-height: 2em;
 }
 
 /* Home Page Styles *********************************************************/
-.wrapper {
-	position: relative;
-}
-
-.container {
-}
-
-#gif-grids {
-	margin: 0 auto;
-}
-
 #logo {
 	text-align: center;
 	font-size: 4em;
@@ -406,11 +502,6 @@ label {
 	padding-top: 0;
 }
 
-.stats-clickable:hover {
-	cursor: pointer;
-	background-color: rgba(255, 255, 255, 0.2);
-}
-
 .stat-number {
 	font-size: 3.25em;
 }
@@ -439,51 +530,76 @@ label {
 	padding-right: 1em;
 }
 
-#tag-nav:hover > .tag-nav {
-	display: block !important;
-}
-
 .tag-nav p {
 	margin: .25em;
 	color: #074C78;
 }
 
-.tag-nav .tag:hover {
+.inner-tag-nav .tag:hover {
 	background-color: #4b96c7;
 	-webkit-box-shadow: 0px 6px 0px #357caa;
 	-moz-box-shadow: 0px 6px 0px #357caa;
 	box-shadow: 0px 6px 0px #357caa; 
 }
 
-.main-buttons {
+.inner-nav {
+	padding: .4em;
 	text-align: center;
+}
+
+.inner-nav-fixed {
+	position: fixed;
+	z-index: 4;
+	top: 0;
+	width: 100%;
+	text-align: center;
+	background-color: rgba(0, 0, 0, .4);
+}
+
+.inner-nav-btn {
+	display: inline-block;
+	margin: .25em auto;
+	padding: .3em .75em;
+	position: relative;
+	width: 5em;
+}
+
+.inner-nav-tags:hover > .inner-tag-nav {
+	display: block !important;
+}
+
+.inner-tag-nav {
+	position: absolute;
+	z-index: 5;
+	margin: 0 auto;
+	padding: .75em;
+	width: 10em;
+	background-color: #d9d9d9;
+	text-align: center;
+	box-shadow: 1px 5px 15px -5px #000;
+	border-radius: .25em; 
 }
 
 .add-gif-form-button {
 	display: inline-block;
-	margin: 0 auto;
-	margin-bottom: 2em;
+	margin: .25em auto;
 	padding: .3em .75em;
-	width: 10em;
-	font-size: 1.2em;
-	line-height: 1.2em;
+	width: 6em;
 }
 
 .bulk-gif-button {
 	display: inline-block;
-	margin: 0 auto;
-	margin-bottom: 2em;
+	margin: .25em auto;
 	padding: .3em .75em;
-	width: 10em;	
-	font-size: 1.2em;
-	line-height: 1.2em;
+	width: 6em;
 }
 
 #bulk-operations {
-	position: relative;
+	position: absolute;
+	z-index: 4;
 	margin: 0 auto;
-	margin-top: -1em;
-	margin-bottom: 2em;	
+	left: 0;
+	right: 0;
 	padding: .5em;
 	width: 60%;
 	max-width: 30em;
@@ -494,7 +610,7 @@ label {
 }
 
 .bulk-option {
-	margin: 0 auto;
+	margin: .5em auto;
 	padding: .25em;
 	width: 60%;
 	color: #2a5876;
@@ -596,7 +712,7 @@ label {
 
 .tag-settings-icon:hover {
 	cursor: pointer;
-	color: #1d8f58;
+	color: #1d8f58 !important;
 }
 
 .tag-settings-icon-clicked {
