--- a/DjangoGIF/apps/users/templates/users/signup.html
+++ b/DjangoGIF/apps/users/templates/users/signup.html
@@ -1,12 +1,8 @@
 {% extends 'home/base.html' %}
 {% block content %}
-<h1>Log In</h1>
 
-{% if message %}
-<p class="message">{{ message }}</p>
-{% endif %}
-
-<form action="{% url 'authenticate' %}" method="post">
+Sign up for an account!
+<form action="{% url 'users:create-account' %}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" class="submit animate">
