--- a/DjangoGIF/apps/home/templates/home/account_created.html
+++ b/DjangoGIF/apps/home/templates/home/account_created.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>Thanks for signing up, {{ name }}</h1>
 
-<a href="{% url 'users:login' %}">Please Log In to Continue</a>
+<a href="{% url 'home:login' %}">Please Log In to Continue</a>
 {% endblock %}
