--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -20,9 +20,35 @@
 
     <body>
 
-    <div class="wrapper">
-    {% block content %}{% endblock %}
+    <div class="nav">
+        <div class="nav-logo">
+            <div id="gif" class="nav-logo-title">GIF</div>
+
+            <div class="nav-logo-img"><img src="http://i.imgur.com/SpaPReR.gif"></div>
+
+            <div id="cache" class="nav-logo-title">Cache</div>
+        </div>
+
+        <div class="nav-links">
+            <a href="{% url 'home:home' %}">HOME</a>
+            {% if logged_in %}
+            <div class="profile-nav-link">PROFILE
+                <div class="profile-nav-extra">
+                    <a href="/u/{{ username }}">{{ username }}</a>
+                    <a href="/u/{{ username }}/edit-profile">EDIT</a>
+                    <a href="{% url 'home:logout' %}">LOGOUT</a>
+                </div>
+            </div>
+            {% else %}
+            <a href="{% url 'home:signup' %}">SIGNUP</a>
+
+            <a href="{% url 'home:login' %}">LOGIN</a>
+            {% endif %}
+        </div>
     </div>
+
+    {% block content %}
+    {% endblock %}
 
     <!-- JavaScripts -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
