--- a/DjangoGIF/apps/home/templates/home/signup.html
+++ b/DjangoGIF/apps/home/templates/home/signup.html
@@ -1,15 +1,14 @@
 {% extends 'home/base.html' %}
 {% block content %}
-
-Sign up for an account!
+<h1 class="title">Sign up for an account!</h1>
 {% if errors %}
-{{ errors }}
+<div class="message">{{ errors }}</div>
 {% endif %}
 
 
-<form action="{% url 'home:create-account' %}" method="post">
+<form action="{% url 'home:create-account' %}" method="post" class="main-form">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" class="submit animate">
+    <input type="submit" class="green-btn main-submit">
 </form>
 {% endblock %}
